--- a/gb/23/5/31/n14007495.md
+++ b/gb/23/5/31/n14007495.md
@@ -1,17 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【菁英论坛】中国老龄化加速 2035社保耗尽</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14007515-website-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14007515-website-600x400.jpg" />///image2=```diff
+- 数万亿养老金窟窿如何填？专家：出售国有资产是唯一出路；老龄化少子化危机同时爆发，2035年养老金耗尽；中共靠印钞补贴养老金窟窿，加剧经济危机。（《菁英论坛》提供）
+```
 <h6>数万亿养老金窟窿如何填？专家：出售国有资产是唯一出路；老龄化少子化危机同时爆发，2035年养老金耗尽；中共靠印钞补贴养老金窟窿，加剧经济危机。（《菁英论坛》提供）
 </h6>
 <hr>
 	<p>【大纪元2023年06月01日讯】中国社会正在加速走向老龄化，养老问题日益突出。过去中共在实施计划生育的时候，宣传“只生一个好，政府来养老”，等到响应政府号召的人退休了，那这个口号就已经改成了“养老不能靠政府”。为了让民众自己养老，中共也模仿西方国家建立了养老保险制度，自己交的钱越多，以后拿的越多。不过，由于种种原因，中国的养老金制度正面临着重重危机，最近，上海、深圳等地的民众发现，他们参加所谓的全国统筹养老保险后，他们个人的养老金大幅下降，这是什么原因造成的？</p>
-<p>此外，由于中国养老保险制度的设计缺陷和运营中的管理缺陷，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%BB%E8%80%81%E9%87%91.md#1">中国养老金</a>系统出了很大的问题，按照一些专家的计算，十多年后中国的养老金会完全归零。那么中共有什么办法解决这些问题吗？</p>
+<p>此外，由于中国养老保险制度的设计缺陷和运营中的管理缺陷，中国养老金系统出了很大的问题，按照一些专家的计算，十多年后中国的养老金会完全归零。那么中共有什么办法解决这些问题吗？</p>
 </p>
-<p><center><a class="gjw-iframe" title="数万亿养老金窟窿如何填？专家：出售国有资产是唯一出路；老龄化少子化危机同时爆发，2035年养老金耗尽；中共靠印钞补贴养老金窟窿，加剧经济危机 05/31" src="https://www.ganjing.com/embed/1fsvvh1258n3e7B78zQOpQ92f1lo1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<h2>个人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BF%9D.md#1">社保</a>变全国统筹 各省算计 利益链复杂</h2>
-<p>大纪元资深编辑与主笔石山在新唐人《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8F%81%E8%8B%B1%E8%AE%BA%E5%9D%9B.md#1">菁英论坛</a>》节目中表示，所谓全国统筹账户，就是把每一个省以前的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BF%9D.md#1">社保</a>账户（尤其是退休金账户）放在一起。以前各省的退休金差异很大，你在这个省就拿这个省的钱，但是从2022年开始，中共要把各省的集中起来，进行全国统筹，你这边多了，他那边就少了，基本上就是一碗水端平。</p>
+<p><center><a class=></a><a href="https://d37g5boc7rm625.cloudfront.net/F1gtQ87vn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a title="数万亿养老金窟窿如何填？专家：出售国有资产是唯一出路；老龄化少子化危机同时爆发，2035年养老金耗尽；中共靠印钞补贴养老金窟窿，加剧经济危机 05/31" src="https://www.ganjing.com/embed/1fsvvh1258n3e7B78zQOpQ92f1lo1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<h2>个人社保变全国统筹 各省算计 利益链复杂</h2>
+<p>大纪元资深编辑与主笔石山在新唐人《菁英论坛》节目中表示，所谓全国统筹账户，就是把每一个省以前的社保账户（尤其是退休金账户）放在一起。以前各省的退休金差异很大，你在这个省就拿这个省的钱，但是从2022年开始，中共要把各省的集中起来，进行全国统筹，你这边多了，他那边就少了，基本上就是一碗水端平。</p>
 <p>最近深圳、上海的社保账号在参加全国统筹后账面余额发生了很大变化，民众反应也很激烈。比如说我有上海的朋友，他在变成全国统筹账户之前，每个月退休金可以拿到9800多块钱，接入统筹之后，就变成5400多块钱了，一下少了4000块钱，还有另外一个朋友他原来是3700多块钱一个月，结果接入之后变成了2200多块钱，这是上海的情况，其实这种情况深圳也有，广州也有，所以现在很多人都人心惶惶。</p>
 <p>中国的整个退休制度的设计发生了很大变化，在文革期间没有社会养老制度，基本上都是所谓企业和单位管养老，文革以后慢慢开始建立，中共叫做循序渐进：刚开始在一个小地方搞，就是县一级，然后是市一级，每个地方都自己搞自己的退休账户，最后到了90年代正式设立退休金制度的时候，是根据省为单位来做的，而现在发展到全国统筹了。</p>
 <p>石山说，中国的退休账户基本上目前有三个账户，第一个账户是政府的基本养老基金，有点像美国的social security那个社保，就是等你退休以后，它会给你一笔基本的钱，你可以饿不死。另外一个就是所谓的企业年金，或者是企业帮你交的一笔钱。第三个就是所谓的个人账户，个人账户就有点像是美国的401(k)，就是说在免税的情况下，你自己交钱给一个基金公司帮你去投资，等于是税前储蓄这样一个概念。</p>
@@ -19,10 +21,10 @@
 <p>问题在于，中国现在进入老龄化，领钱的人越来越多，交钱的人越来越少，这本身是非常大的一个压力。中国的政府基本养老基金，如果从全国来看，到2015年到2016年开始就要有亏空，到了2022年这个基金的规模就开始往下降，因为你交的人少了，领的人多了，所以那个钱会越来越少。现在有的算法是到2032年，有的算法是到2036年，这个钱就没有了。</p>
 <p>石山说，以前广东出现过这种情况，有大量的人去广东打工，打工以后你的企业按照规定都要给你交社保基金，你个人交一份，企业交一份，如果你这个人走了，比如说不在广东打工了，回四川了，或者我去上海打工了，对不起，这个企业给你交的这笔钱，你是拿不走的。那这笔钱就变成了你给广东的贡献了，全国其它省份认为，这个就不公平了，因为这是我们的人，等他年老了，他就回乡下来，我们还要给他钱，我们怎么样都得有个低保，就等于我们要照顾他了。但是他在你那个地方交这么多年钱，这笔钱跑你那儿去了，所以北京说进行全国统筹，它也有一定的道理在里面。</p>
 <h2>计划生育生恶果 老龄化少子化危机同时爆发</h2>
-<p>南卡罗来纳大学艾肯商学院教授谢田在《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8F%81%E8%8B%B1%E8%AE%BA%E5%9D%9B.md#1">菁英论坛</a>》表示，中国社科院做过一次精算，到2035年中国的养老金有可能就全部用完了。他们的算法是2027年这个基金可以一直慢慢往上升，升到最高的峰值的时候是接近七万亿，然后2028年以后就开始往下降，因为老人越来越多，寿命越来越长。那到2035年所谓的养老金被用光了。但实际上在2035年之前可能就会出现问题，因为社科院报告里面也说了，赤字规模越来越大，到2028年的时候，就是负1110亿，到2050年的时候是高达负11万亿。</p>
+<p>南卡罗来纳大学艾肯商学院教授谢田在《菁英论坛》表示，中国社科院做过一次精算，到2035年中国的养老金有可能就全部用完了。他们的算法是2027年这个基金可以一直慢慢往上升，升到最高的峰值的时候是接近七万亿，然后2028年以后就开始往下降，因为老人越来越多，寿命越来越长。那到2035年所谓的养老金被用光了。但实际上在2035年之前可能就会出现问题，因为社科院报告里面也说了，赤字规模越来越大，到2028年的时候，就是负1110亿，到2050年的时候是高达负11万亿。</p>
 <p>但是实际上这个数字计算也不是那么特别准确，因为现在这个结余的数字还包括了大口径的财政补贴在里面，如果是在小口径补贴的话，实际上到2019年时候就已经是负数。如果没有这种大口径补贴的话，2050年的时候，就是负16万亿，所以实际上这个亏空是非常非常的大。</p>
 <p>谢田说，中国城镇职工养老保险的支付压力越来越大，在2019年的时候，是两个人来赡养一个退休的人，到了2050年的时候，就是一个人要养一个退休的人，按照社科院这个报告， 80后这一代还没退休呢，养老金的钱就没了。</p>
-<p>独立自媒体旭光时评的主持人郑旭光在《菁英论坛》表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%BB%E8%80%81%E9%87%91.md#1">中国养老金</a>在一个关键时间点就会归零，这和中国独特的问题有关，就是计划生育政策搞了四十多年，造成一个老龄化和少子化同时到来，在这样一个情况下，养老金亏空就会加速到来。</p>
+<p>独立自媒体旭光时评的主持人郑旭光在《菁英论坛》表示，中国养老金在一个关键时间点就会归零，这和中国独特的问题有关，就是计划生育政策搞了四十多年，造成一个老龄化和少子化同时到来，在这样一个情况下，养老金亏空就会加速到来。</p>
 <p>中国的生育率大概是一点零几，完全顶不住正常的人口交替，正常人口迭代生育率得达到2.1或者2.3，那你现在只有一点几出头，所以从这个情况来讲，就是养老的压力和养小的压力同时到来，那么年轻人就躺平了，就是没人给你交钱了。按中国过去的卫计委主任的说法，十年前他说计划生育少生了三个亿，你想想，这么些年轻人口，本应该现在养成了，可以交养老金的，但是现在不存在这些人，所以养老金入不敷出。</p>
 <p>郑旭光说，养老金制度设计的时候，是一个寅吃卯粮的概念，就是由当时正在工作的年轻人供养现在已经退休的老年人，就是你交的那个钱是交给当时已经退休的人，而不是交给以后你自己花的那一部分。那么计划生育政策相当于什么呢？相当于这个人力资本的投资你没有做，整个国家没有做，具体到每一家也都没做，把这个钱拿去做了生产基金，拿去消费了，所以GDP很好看，但是未来没有人给你交养老金，这是一笔大亏空。那这笔钱谁该出啊？当然是国家来补。</p>
 <h2>解决养老金亏空问题 出售国有资产可行吗？</h2>
@@ -38,44 +40,35 @@
 <p>责任编辑：李昊#</p>
 	
 <hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001028.md#1">【菁英论坛】俄“匕首”被拦截 俄乌战拐点到？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/25/n14003477.md#1">【菁英论坛】西安办峰会 习近平借龙脉定西域？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/25/n14004131.md#1">【菁英论坛】房地产局部崩盘 中共无计可施</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004760.md#1">【菁英论坛】俄自由军攻入俄境 中共隐忧更甚</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/20/n14001028.md#1">【菁英论坛】俄“匕首”被拦截 俄乌战拐点到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/25/n14003477.md#1">【菁英论坛】西安办峰会 习近平借龙脉定西域？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/25/n14004131.md#1">【菁英论坛】房地产局部崩盘 中共无计可施</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/26/n14004760.md#1">【菁英论坛】俄自由军攻入俄境 中共隐忧更甚</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/4/n11843021.md#1">武汉瘟疫治寻根  历史天象醒今人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/24/n14003043.md#1">心理学家：维持幸福婚姻千万别做这件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997441.md#1">洞天仙界不似在人间  进去半日人间消逝数十年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999285.md#1">【古道人生】未婚夫突然疯了未婚妻怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004563.md#1">【未解之谜】中国境内的史前避难所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004224.md#1">传奇名妓苏小小到底是谁？连乾隆皇帝都去过苏小小墓！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006838.md#1">【神韵早期节目】雪域豪情（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007392.md#1">【新闻大家谈】新二元结构 中国经济陷困局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006729.md#1">【远见快评】河北派出所鞭炮爆炸 四大疑云</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/23/n14002188.md#1">组图：当今最可靠的十款日本车 凌志占二</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006061.md#1">内幕：美国逮捕的中共特工陈军做了什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005561.md#1">云南强拆清真寺外观 爆警民冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005496.md#1">杨紫代言韩国品牌疑惹祸 活动被叫停传遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005474.md#1">戛纳影展秀16套造型 范冰冰被冠“中国巨星”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006168.md#1">考上台师大EMBA 47岁蔡君茹：得知录取手脚发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006719.md#1">杨丽花纪录片开拍：歌仔戏是我的生命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005453.md#1">万人演唱会10次被狂喊退票 歌手薛之谦傻眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004716.md#1">煮米饭用什么水好？6个秘诀让米饭软糯可口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/27/n14005117.md#1">排重金属第一菜 香菜祛斑、养肾 中医师荐8种妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005848.md#1">挪威“奇迹石”海拔千米 踩空就重新投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993859.md#1">研究发现脂肪肝源于肠道菌！灭菌需戒2种饮食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000338.md#1">大麻危害低于烟草？从两项研究结果一窥真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/31/n14007495.htm">【菁英论坛】中国老龄化加速 2035社保耗尽</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/31/n14007495.htm">【菁英论坛】中国老龄化加速 2035社保耗尽</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/5/31/n14007495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
